--- a/.env
+++ b/.env
@@ -5,4 +5,14 @@ DB_USERNAME=user
 DB_PASSWORD=secret
 DB_TIME_ZONE=Europe/Moscow
 
+NATS_HOST=localhost
 NATS_PORT=4222
+NATS_URL=nats://${NATS_HOST}:${NATS_PORT}
+
+STAN_CLUSTER_ID=test-cluster
+
+CLIENT_ID_PUBLISHER=publisher
+CLIENT_ID_SUBSCRIBER=subscriber
+
+STAN_CONNECTION_SUBJECT=test-subject
+STAN_DURABLE_NAME=test-durable
