--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:16.1
     restart: always
     volumes:
-      - ./storage/postgresql/data:/var/lib/postgresql/data
+      - ./storage/.postgresql/data:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_USER: ${DB_USERNAME}
